  column names anymore.
- Using base::rowSums and functions from the matrixStats package
  to speed up some operations on rows or columns of matrices.
- Reduced the number of calls to options() by one when setting and
  restoring options

File: ffcsaps.R
---------------

- Increased performance by using sparse matrices from the Matrix
  package.

File: latexify.R
----------------

- Improved efficiency when handling a large number of strings with
  the "bytes" Encoding.  The code now uses R.utils::captureOutput()
  instead of a home-baked re-implementation of (parts of)
  utils::capture.output(), which is also a more compact solution in
  terms of lines of code in dplR.  See Henrik Bengtsson's notes at
  http://www.jottr.org/2014/05/captureOutput.html (referenced on
  2015-01-07).
- Removed an unused variable.

File: net.R
-----------

- New function for computing the NET parameter (Esper et al., 2001).

File: read.tucson.R
-------------------

- New argument 'edge.zeros', TRUE (default) or FALSE.  If TRUE,
  possible leading and trailing zero values in tree-ring series are
  kept.  If FALSE, such values are dropped.  The latter is how the
  function has worked between (pre-)release 1.5.5 and the previoius
  release, and may be considered a bug or a misfeature.  To
  reiterate, the default behavior has changed in some cases.  The
  alternative, 1.5.5--1.6.2 behavior can be restored by changing the
  value of the argument.  Reported by Daniel Bishop and Neil
  Pederson.

File: redfit.R
--------------

- Fixed a bug where redfit() would fail if the "stats" package was
  not attached.

File: series.rwl.plot.R
-----------------------

- Worked around a problem in graphics::abline(): the function
  fails when a linear model is given and the "stats" package is not
  attached. The solution is to extract the coefficients of the model
  and use those in the call.

File: write.tridas.R
--------------------

- Implementation detail: When checking the package version,